tests/fixtures/invalid/pow_set_str_bytes.py
# Cannot call pow() with Set[int], Str, Bytes
x = pow({1, 2, 3}, "hello", b"hello")
